# cars_github

./: .gitignore  2_step_transform.py  3_step_analytics.py  analytics.py  config.py  main.py  price_history.py  pyproject.toml  readme.md  requirements.txt  step1_merge.py  transform.py
src/auto_project/: analytics.py  analytics_engine.py  analytics_engine_extended.py  config_manager.py  data_transformer.py  logging_setup.py  main.py  merged_table_manager.py  pipeline_orchestrator.py  price_history.py  price_history_tracker.py  snapshot_manager.py  transform.py  validators.py
tests/: test_cli_imports.py  test_config_example.py  test_logging_setup.py  test_smoke.py  test_validators.py
