[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-project"
version = "0.1.0"
description = "Production-grade analytics and ETL toolkit"
authors = [{ name = "Author", email = "author@example.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "psycopg[binary]>=3.2",
    "SQLAlchemy>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "types-psycopg2",
    "types-PyYAML",
]

[project.scripts]
auto-project = "auto_project.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","N","UP","B","C4","SIM","ARG"]
exclude = ["build","dist",".venv"]
